// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: TabMyDelegations view should show committed validators 1`] = `
<div>
  <div>
    <tablevalidators-stub
      showonmobile="my_delegations"
      validators="[object Object]"
    />
  </div>
   
  <div>
    <h3
      class="tab-header transactions"
    >
      Pending Undelegations
    </h3>
     
    <div
      class="unbonding-transactions"
    >
      <transactionlist-stub
        transactions="[object Object]"
        validators="[object Object]"
      />
       
      <br />
    </div>
  </div>
</div>
`;

exports[`Component: TabMyDelegations view should show loading message 1`] = `
<div>
  <tmdataloading-stub
    title="Data is loading…"
  />
   
  <!---->
</div>
`;

exports[`Component: TabMyDelegations view should show message when loading and not connected 1`] = `
<div>
  <tmdataconnecting-stub />
   
  <!---->
</div>
`;

exports[`Component: TabMyDelegations view should show message when no commited validators 1`] = `
<div>
  <tmdatamsg-stub
    icon="sentiment_dissatisfied"
  >
    <div>
      No Active Delegations
    </div>
     
    <div>
      
      Looks like you haven't delegated any ATOMs yet.
      Head over to the
      
      <router-link-stub
        to="[object Object]"
      >
        validator list
      </router-link-stub>
      to
      make your first delegation!
    
    </div>
  </tmdatamsg-stub>
   
  <div>
    <h3
      class="tab-header transactions"
    >
      Pending Undelegations
    </h3>
     
    <div
      class="unbonding-transactions"
    >
      <transactionlist-stub
        transactions="[object Object]"
        validators="[object Object]"
      />
       
      <br />
    </div>
  </div>
</div>
`;

exports[`Component: TabMyDelegations view should show pending undelegations 1`] = `
<div>
  <div>
    <tablevalidators-stub
      showonmobile="my_delegations"
      validators="[object Object]"
    />
  </div>
   
  <div>
    <h3
      class="tab-header transactions"
    >
      Pending Undelegations
    </h3>
     
    <div
      class="unbonding-transactions"
    >
      <transactionlist-stub
        transactions="[object Object]"
        validators="[object Object]"
      />
       
      <br />
    </div>
  </div>
</div>
`;

exports[`Component: TabMyDelegations view should show sign in message when not signed in 1`] = `
<div>
  <cardsigninrequired-stub />
   
  <div>
    <h3
      class="tab-header transactions"
    >
      Pending Undelegations
    </h3>
     
    <div
      class="unbonding-transactions"
    >
      <transactionlist-stub
        transactions="[object Object]"
        validators="[object Object]"
      />
       
      <br />
    </div>
  </div>
</div>
`;
